package com.teamates.controller;

import com.teamates.model.Session;
import com.teamates.model.SportType;
import com.teamates.model.User;
import com.teamates.service.SessionService;
import com.teamates.service.UserService;
import com.teamates.dto.SessionMapper;
import com.teamates.dto.SessionResponseDTO;
import com.teamates.service.RegistrationService;
import com.teamates.exception.NotFoundException;
import lombok.RequiredArgsConstructor;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;
import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.List;
import java.util.UUID;

@RestController
@RequestMapping("/api/sessions")
@RequiredArgsConstructor
public class SessionController {

    private final SessionService sessionService;
    private final UserService userService;
    private final SessionMapper sessionMapper;
    private final RegistrationService registrationService;



    @PostMapping
    public ResponseEntity<SessionResponseDTO> createSession(@RequestBody CreateSessionRequest request) {
        User host = userService.getCurrentUser();

        Session session = sessionService.createSession(
                host,
                request.sportType(),
                request.title(),
                request.scheduledAt(),
                request.endTime(),
                request.googlePlaceId(),
                request.facilityName(),
                request.facilityAddress(),
                request.facilityLatitude(),
                request.facilityLongitude(),
                request.ageMin(),
                request.ageMax(),
                request.maxPlayers()
        );
        int currentPlayers = registrationService.countPlayers(session.getSessionId());
        return ResponseEntity.ok(sessionMapper.toDto(session, currentPlayers));
    }

    @GetMapping("/my")
    public ResponseEntity<List<SessionResponseDTO>> getMySessions(
            @RequestParam(required = false) String role) {
        User currentUser = userService.getCurrentUser();
        return ResponseEntity.ok(
                sessionService.getSessionsForUser(currentUser.getUserId(), role)
                        .stream()
                        .map(s -> sessionMapper.toDto(s, registrationService.countPlayers(s.getSessionId())))
                        .toList()
        );
    }

    @GetMapping("/{sessionId}")
    public ResponseEntity<SessionResponseDTO>  getSession(@PathVariable UUID sessionId) {
        Session session = sessionService.getSessionById(sessionId)
                .orElseThrow(() -> new NotFoundException("Session not found"));
        int currentPlayers = registrationService.countPlayers(session.getSessionId());
        return ResponseEntity.ok(sessionMapper.toDto(session, currentPlayers));
    }

    @GetMapping("/sport/{sportType}")
    public ResponseEntity<List<SessionResponseDTO>> getSessionsBySport(@PathVariable SportType sportType) {
        return ResponseEntity.ok(
                sessionService.getSessionsBySport(sportType)
                        .stream()
                        .map(s -> sessionMapper.toDto(s, registrationService.countPlayers(s.getSessionId())))
                        .toList()
        );
    }

    @GetMapping("/search")
    public ResponseEntity<List<SessionResponseDTO>> searchSessions(
            @RequestParam double lat,
            @RequestParam double lng,
            @RequestParam(defaultValue = "5000") double radius,
            @RequestParam(required = false) String sport,
            @RequestParam(required = false) Integer ageMin,
            @RequestParam(required = false) Integer ageMax,
            @RequestParam(required = false) String gender) {
        return ResponseEntity.ok(
                sessionService.searchSessions(lat, lng, radius, sport, ageMin, ageMax, gender)
                        .stream()
                        .map(s -> sessionMapper.toDto(s,
                                registrationService.countPlayers(s.getSessionId())))
                        .toList()
        );
    }

    @PatchMapping("/{sessionId}")
    public ResponseEntity<SessionResponseDTO> patchSession(
            @PathVariable UUID sessionId,
            @RequestBody PatchSessionRequest request) {
        User currentUser = userService.getCurrentUser();
        Session session = sessionService.patchSession(
                sessionId,
                currentUser.getUserId(),
                request.title(),
                request.scheduledAt(),
                request.endTime(),
                request.ageMin(),
                request.ageMax(),
                request.maxPlayers(),
                request.genderPreference()
        );
        int currentPlayers = registrationService.countPlayers(session.getSessionId());
        return ResponseEntity.ok(sessionMapper.toDto(session, currentPlayers));
    }

    public record PatchSessionRequest(
            String title,
            LocalDateTime scheduledAt,
            LocalDateTime endTime,
            Integer ageMin,
            Integer ageMax,
            Integer maxPlayers,
            String genderPreference
    ) {}



    @DeleteMapping("/{sessionId}")
    public ResponseEntity<Void> deleteSession(@PathVariable UUID sessionId) {
        User currentUser = userService.getCurrentUser();
        sessionService.deleteSession(sessionId, currentUser.getUserId());
        return ResponseEntity.noContent().build();
    }



    public record CreateSessionRequest(
            SportType sportType,
            String title,
            LocalDateTime scheduledAt,
            LocalDateTime endTime,
            String googlePlaceId,
            String facilityName,
            String facilityAddress,
            BigDecimal facilityLatitude,
            BigDecimal facilityLongitude,
            Integer ageMin,
            Integer ageMax,
            Integer maxPlayers
    ) {}


}